Fix invisible tooltip having outline on focus

--- a/src/scss/components/_tooltip.scss
+++ b/src/scss/components/_tooltip.scss
@@ -1,5 +1,6 @@
 .tooltip {
     position: relative;
+    outline: none;
     &::before {
         content:attr(title);
         display: block;
